# SnapUGC-LightKD

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: final_1000.yaml
data/: README.md
docs/: literature.md  pipeline_comparison_report.md
notebooks/: kaggle_final_1000.ipynb  kaggle_opening5_teacher_v8_5000.ipynb
scripts/: compare_teacher_experiments.py  ensemble_teacher_experiments.py  extract_features.py  extract_qwen.py  make_diagnostics.py  make_subset.py  make_synthetic.py  tabular_baseline.py  train.py  train_teacher_experiment.py
src/snapugc_lightkd/: __init__.py  diagnostics.py  extraction.py  models.py  qwen_extraction.py  subset.py  teacher_experiments.py  teacher_v10_compact_rich.py  teacher_v12_rich_linear_head.py  teacher_v13_rich_sampledrop.py  teacher_v3_regularized.py  teacher_v4_shared_text.py  teacher_v5_gated_late_fusion.py  teacher_v6_pooled_rank.py  teacher_v7_corr_rank.py  teacher_v8_rich_inputs.py  teacher_v9_rich_corr_rank.py  training.py
